--- a/src/components/styles/style.css
+++ b/src/components/styles/style.css
@@ -32,6 +32,7 @@ opacity: 1;
 background-size: 7px 7px;
 background-image: repeating-linear-gradient(45deg, #8ea4d2 0, #6279b8 0.7000000000000001px, #f3f3f3 0, #f3f3f3 50%);
 height: 100%;
+/* source for background: https://www.magicpattern.design/tools/css-backgrounds */
 }
 
 .header {
@@ -43,11 +44,7 @@ height: 100%;
 .about {
   min-height: 100%;
 }
-/* 
-nav {
-  background-color: #4c9f70;
-  color: white;
-} */
+
 
 li {
   list-style: none;
@@ -57,17 +54,6 @@ li {
   margin: 10px;
 }
 
-#portfolio {
-  /* background-color: #4c9f70; */
-}
-
-body {
-/* background-color: #f9f9fd;
-opacity: 0.2;
-background-image: linear-gradient(0deg, #f9f9fd 50%, #62997b 50%);
-background-size: 13px 13px;
-color: var(--green) */
-}
 
 footer {
 background-color: #6279b8;
